# ransac-shape-detector

./: CMakeLists.txt  README.md
src/: main.cpp  ransac.cpp  ransac.h  stl_reader.h
